# agentblue-accounting

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: pr-stage7.md
app/agentblue/: __init__.py  config.py  logging.py  main.py
app/agentblue/api/: health.py
app/agentblue/categorization/: __init__.py  constants.py  domain.py  engine.py  exceptions.py  features.py  models.py  normalization.py  repository.py  review.py  router.py  rules.py  schemas.py  scoring.py  services.py
app/agentblue/db/: __init__.py  base.py  session.py
app/agentblue/db/models/: __init__.py  quickbooks_accounting.py  quickbooks_sync.py
app/agentblue/integrations/quickbooks/: __init__.py  api_client.py  callback.py  client.py  config.py  exceptions.py  health.py  models.py  oauth.py  repository.py  router.py  services.py
app/agentblue/integrations/quickbooks/accounting/: __init__.py  domain.py  normalizer.py  repository.py  router.py  service.py  services.py
app/agentblue/integrations/quickbooks/sync/: __init__.py  domain.py  query_builder.py  registry.py  repository.py  router.py  service.py
app/agentblue/integrations/quickbooks/writeback/: __init__.py  exceptions.py  payloads.py  service.py  validation.py
app/agentblue/ml/: __init__.py  cli.py  constants.py  domain.py  exceptions.py  models.py  router.py  schemas.py  services.py
app/agentblue/ml/data/: __init__.py  extraction.py  fingerprint.py  splitting.py  validation.py
app/agentblue/ml/features/: preprocessing.py  schema.py  transformers.py
app/agentblue/ml/inference/: __init__.py  predictor.py  ranking.py  service.py  shadow.py
app/agentblue/ml/monitoring/: __init__.py  drift.py  metrics.py  reports.py
app/agentblue/ml/registry/: __init__.py  artifacts.py  loading.py  manifests.py  service.py
app/agentblue/ml/training/: baselines.py  calibration.py  candidates.py  evaluation.py  selection.py  trainer.py
docs/: ARCHITECTURE.md  ENGINEERING_WORKFLOW.md  MASTER_PROMPT.md  PROJECT_CONTEXT.md  TASKS.md
docs/adr/: 0001-initial-architecture.md
migrations/: env.py
migrations/versions/: 0001_quickbooks_sync_tables.py  0002_quickbooks_accounting_tables.py  0003_categorization_tables.py  0004_ml_tables.py  0005_ml_tables_completion.py
scripts/: dev.ps1  doctor.py
tests/: conftest.py
tests/integration/: conftest.py  test_categorization_db.py  test_health_ready.py  test_health_ready_failure.py  test_ml_constraints.py
tests/unit/: test_artifact_security.py  test_categorization.py  test_categorization_extended.py  test_doctor.py  test_health_live.py  test_infrastructure_extended.py  test_ml_api_cli.py  test_ml_data_features.py  test_ml_registry_shadow.py  test_ml_selection_reports.py  test_ml_synthetic_smoke.py  test_ml_training.py  test_quickbooks_accounting.py  test_quickbooks_api_client.py  test_quickbooks_callback.py  test_quickbooks_client.py  test_quickbooks_models.py  test_quickbooks_oauth.py  test_quickbooks_repository.py  test_quickbooks_sync.py  test_structlog_regression.py  test_sync_writeback_extended.py
